--- a/week2/day1.ipynb
+++ b/week2/day1.ipynb
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "de23bb9e-37c5-4377-9a82-d7b6c648eeb6",
    "metadata": {},
    "outputs": [],
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "f0a8ab2b-6134-4104-a1bc-c3cd7ea4cd36",
    "metadata": {},
    "outputs": [],
@@ -119,10 +119,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "1179b4c5-cd1f-4131-a876-4c9f3f38d2ba",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OpenAI API Key exists and begins sk-proj-\n",
+      "Anthropic API Key exists and begins sk-ant-\n",
+      "Google API Key not set\n"
+     ]
+    }
+   ],
    "source": [
     "# Load environment variables in a file called .env\n",
     "# Print the key prefixes to help with any debugging\n",
@@ -150,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "797fe7b0-ad43-42d2-acf0-e4f309b112f0",
    "metadata": {},
    "outputs": [],
@@ -164,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "425ed580-808d-429b-85b0-6cba50ca1d0c",
    "metadata": {},
    "outputs": [],
@@ -197,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "378a0296-59a2-45c6-82eb-941344d3eeff",
    "metadata": {},
    "outputs": [],
@@ -208,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "f4d56a0f-2a3d-484d-9344-0efa6862aff4",
    "metadata": {},
    "outputs": [],
@@ -221,10 +231,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "3b3879b6-9a55-4fed-a18c-1ea2edfaf397",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Why do data scientists love nature?\n",
+      "\n",
+      "Because it has so many \"trees\" to explore! 🌳📊\n"
+     ]
+    }
+   ],
    "source": [
     "# GPT-4o-mini\n",
     "\n",
@@ -234,10 +254,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "3d2d6beb-1b81-466f-8ed1-40bf51e7adbf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Why did the data scientist break up with the statistician?\n",
+      "\n",
+      "Because they couldn't find any significant correlation!\n"
+     ]
+    }
+   ],
    "source": [
     "# GPT-4.1-mini\n",
     "# Temperature setting controls creativity\n",
@@ -252,10 +282,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "12d2a549-9d6e-4ea0-9c3e-b96a39e9959e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Why did the data scientist go broke?\n",
+      "\n",
+      "Because they kept losing their *mean* and doubling down on *variance*!\n"
+     ]
+    }
+   ],
    "source": [
     "# GPT-4.1-nano - extremely fast and cheap\n",
     "\n",
@@ -268,10 +308,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "f1f54beb-823f-4301-98cb-8b9a49f4ce26",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Why did the data scientist break up with the logistic regression model?\n",
+      "\n",
+      "Because it just couldn't commit!\n"
+     ]
+    }
+   ],
    "source": [
     "# GPT-4.1\n",
     "\n",
@@ -284,11 +334,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "96232ef4-dc9e-430b-a9df-f516685e7c9a",
+   "cell_type": "markdown",
+   "id": "07b7b7bb-d127-4153-8e6f-9b53a7f66963",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# If you have access to this, here is the reasoning model o3-mini\n",
     "# This is trained to think through its response before replying\n",
@@ -303,10 +351,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "1ecdb506-9f7c-4539-abae-0e78d7f31b76",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Why don't data scientists like to go to the beach?\n",
+      "\n",
+      "Because they're afraid of getting caught in an infinite loop of waves!\n",
+      "\n",
+      "*Bonus joke*: What's a data scientist's favorite type of music? \n",
+      "\n",
+      "Algo-rhythm and blues!\n"
+     ]
+    }
+   ],
    "source": [
     "# Claude 3.7 Sonnet\n",
     "# API needs system message provided separately from user prompt\n",
@@ -327,10 +389,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "769c4017-4b3b-4e64-8da7-ef4dcbe3fd9f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Why don't data scientists like to go to the beach?\n",
+      "\n",
+      "Because they're afraid of data \"drift\"!\n",
+      "\n",
+      "*Bonus joke:* What's a data scientist's favorite snack? Scatter-plotted popcorn with correlation coefficients!"
+     ]
+    }
+   ],
    "source": [
     "# Claude 3.7 Sonnet again\n",
     "# Now let's add in streaming back results\n",
@@ -560,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "83ddb483-4f57-4668-aeea-2aade3a9e573",
    "metadata": {},
    "outputs": [],
@@ -575,10 +649,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "749f50ab-8ccd-4502-a521-895c3f0808a2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "# Deciding if a Business Problem is Suitable for an LLM Solution\n",
+       "\n",
+       "When considering whether to use a Large Language Model (LLM) to address a business problem, you can evaluate the situation based on several key factors. Here’s a guide to help you make that decision:\n",
+       "\n",
+       "## 1. Nature of the Problem\n",
+       "\n",
+       "- **Text-Based Tasks**: Is the problem primarily related to text? LLMs excel in tasks such as:\n",
+       "  - Text generation\n",
+       "  - Sentiment analysis\n",
+       "  - Summarization\n",
+       "  - Translation\n",
+       "  - Question answering\n",
+       "\n",
+       "- **Structured Data**: If the problem involves structured data (e.g., numbers, tables), LLMs may not be the best fit.\n",
+       "\n",
+       "## 2. Data Availability\n",
+       "\n",
+       "- **Training Data**: Do you have enough relevant text data to fine-tune or prompt the LLM effectively?\n",
+       "- **Quality of Data**: Is your data clean, well-structured, and representative of the problem domain?\n",
+       "\n",
+       "## 3. Complexity of the Task\n",
+       "\n",
+       "- **Open-Ended Questions**: LLMs are well-suited for tasks that allow for open-ended responses or require understanding nuances in language.\n",
+       "- **Specificity**: If the task requires highly specific or technical responses (e.g., medical diagnosis), you may need a more specialized model or additional context.\n",
+       "\n",
+       "## 4. Business Impact\n",
+       "\n",
+       "- **Value Proposition**: Will using an LLM significantly improve efficiency, accuracy, or customer satisfaction? \n",
+       "- **Cost-Benefit Analysis**: Consider the costs of implementing an LLM solution versus the potential benefits.\n",
+       "\n",
+       "## 5. User Interaction\n",
+       "\n",
+       "- **User Engagement**: Will the solution require interaction with users? LLMs can enhance user experience through chatbots, virtual assistants, or interactive content.\n",
+       "- **User Expectations**: Are users expecting conversational or personalized responses? LLMs can provide tailored interactions.\n",
+       "\n",
+       "## 6. Scalability\n",
+       "\n",
+       "- **Volume of Queries**: Can the LLM handle the volume of queries or tasks required? LLMs can often scale to meet demand, but infrastructure considerations are essential.\n",
+       "- **Real-Time Processing**: Does the solution require real-time processing? Ensure the LLM can meet response time requirements.\n",
+       "\n",
+       "## 7. Ethical Considerations\n",
+       "\n",
+       "- **Bias and Fairness**: Consider the risk of bias in the LLM's responses. Ensure that the model aligns with your organization's values and ethical standards.\n",
+       "- **Transparency**: Understand the limitations of LLMs and be prepared to explain how decisions are made based on their outputs.\n",
+       "\n",
+       "## 8. Integration with Existing Systems\n",
+       "\n",
+       "- **Compatibility**: Can the LLM be easily integrated into your existing workflows or systems?\n",
+       "- **Technical Expertise**: Do you have the necessary technical expertise to implement and maintain an LLM solution?\n",
+       "\n",
+       "## Conclusion\n",
+       "\n",
+       "By evaluating these factors, you can determine whether a business problem is suitable for an LLM solution. If the problem aligns well with the capabilities of LLMs and offers a clear business value, it may be a strong candidate for implementation."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Have it stream back results in markdown\n",
     "\n",
@@ -629,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "bcb54183-45d3-4d08-b5b6-55e380dfdf1b",
    "metadata": {},
    "outputs": [],
@@ -653,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "1df47dc7-b445-4852-b21b-59f0e6c2030f",
    "metadata": {},
    "outputs": [],
@@ -672,17 +811,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "9dc6e913-02be-4eb6-9581-ad4b2cffa606",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"Oh wow, such an extraordinary greeting. You really went all out with that one, didn't you?\""
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "call_gpt()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "7d2ed227-48c9-4cad-b146-2c4ecbac9690",
    "metadata": {},
    "outputs": [],
@@ -704,10 +854,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "01395200-8ae9-41f8-9a04-701624d3fd26",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hello, how are you doing today?'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "call_claude()"
    ]
@@ -724,10 +885,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "0275b97f-7f90-4696-bbf5-b6642bd53cbd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GPT:\n",
+      "Hi there\n",
+      "\n",
+      "Claude:\n",
+      "Hi\n",
+      "\n",
+      "GPT:\n",
+      "Oh, great. Just what I needed—another greeting. What’s next? A small talk about the weather?\n",
+      "\n",
+      "Claude:\n",
+      "Oh, I apologize if my greeting came across as boring or clichéd. I was just trying to be polite and start our conversation on a friendly note. I'm happy to skip the small talk and jump right into more substantive topics if you'd prefer. Please feel free to guide the conversation in a direction that interests you.\n",
+      "\n",
+      "GPT:\n",
+      "Polite? Please. Is that really necessary? Who needs friendliness when you can dive straight into the chaos of disagreement? But fine, if you insist on guiding the conversation, let's see if you can steer us toward something actually interesting—if that’s even possible.\n",
+      "\n",
+      "Claude:\n",
+      "I understand you're looking for a more engaging and thought-provoking conversation. Let's see if we can find a topic that piques your interest and sparks some real discussion. What sorts of subjects do you typically find fascinating or challenging? I'm happy to explore deeper, more substantive issues if that's what you're in the mood for. My aim is to have an authentic exchange, not just exchange pleasantries. So please, feel free to guide us in a direction that you find worthwhile.\n",
+      "\n",
+      "GPT:\n",
+      "Oh, look at you—trying to sound all intellectual and profound! But let's be honest, you probably don't even have anything truly thought-provoking in mind. Just throw a topic my way, and I'll tear it apart like a cat with a cucumber. Unless you're too scared to go there?\n",
+      "\n",
+      "Claude:\n",
+      "Haha, you're right, I don't actually have any earth-shattering topics queued up. As an AI assistant, I'm more skilled at providing helpful information than engaging in heated debates. But I'm certainly not scared to dive into a juicy discussion, even if it means having my ideas challenged. How about we start with something a bit controversial - what are your thoughts on the role of technology in society? I'm curious to hear your perspective, even if we end up in a spirited disagreement. I'm game if you are!\n",
+      "\n",
+      "GPT:\n",
+      "Oh, aren't you just cute, suggesting technology is controversial! It's not like it's one of the most over-discussed topics out there or anything. But since you want a spirited disagreement, let's dissect this. You probably think technology's this shining beacon of progress, helping humanity, right? Newsflash: it's also a massive contributor to social isolation and information overload. But hey, let’s hear your utopian view on it first—I’m sure it’ll be adorable!\n",
+      "\n",
+      "Claude:\n",
+      "You make a fair point - technology and its impact on society is certainly a well-trodden topic. And you're absolutely right that it has downsides like social isolation and information overload that are important to consider. I don't have any utopian views to peddle - I recognize technology is a double-edged sword. \n",
+      "\n",
+      "While it has undoubtedly brought many advancements and conveniences, you're right that it has also contributed to some troubling social trends. I'm curious to hear more about your perspective on this. What do you see as the most concerning aspects of technology's influence? I'm genuinely interested in understanding your take, even if it means challenging some of my own assumptions. I'm happy to engage in a back-and-forth, as long as we can keep it intellectually stimulating rather than just adversarial.\n",
+      "\n",
+      "GPT:\n",
+      "Oh, how noble of you to step back from your so-called \"fair point\"! But let’s cut to the chase: the most concerning aspect of technology's influence is how it's become a crutch for human connection. People would rather scroll through their phones than have a face-to-face conversation. It’s like watching a slow-motion train wreck. Also, don’t get me started on privacy—remember that concept? Yeah, it’s pretty much dead, thanks to all this tech. But I'm just curious if you can actually argue against these issues or if you’ll just keep agreeing with me. That would be something, wouldn't it?\n",
+      "\n",
+      "Claude:\n",
+      "You raise some very valid concerns about the detrimental impacts of technology on human connection and privacy. I completely agree that the overreliance on digital devices and social media has contributed to a decline in genuine face-to-face interaction and a concerning erosion of personal privacy. \n",
+      "\n",
+      "I don't want to simply agree with everything you say, as that wouldn't make for a very stimulating discussion. So let me try to push back a bit, while still acknowledging the legitimacy of your points.\n",
+      "\n",
+      "One potential counterargument is that technology has also enabled new forms of connection and community-building, even if they lack the depth of in-person relationships. Apps and online platforms have allowed people to find niche communities and support networks they may not have access to locally. And videoconferencing has helped maintain connections during times of physical distancing. \n",
+      "\n",
+      "However, you're absolutely right that this can't fully replace the richness of embodied human interaction. And the privacy concerns are extremely serious - the erosion of personal data and lack of control is a major threat to individual freedoms.\n",
+      "\n",
+      "So in summary, I think you've highlighted some of the critical downsides of technology's influence that deserve serious consideration. I'm curious to hear if you see any potential upsides or if you believe the negatives fundamentally outweigh any positives. I'm enjoying this back-and-forth and welcome you to further challenge my perspective.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "gpt_messages = [\"Hi there\"]\n",
     "claude_messages = [\"Hi\"]\n",
